--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<title>Performing Maintenance</title>
+<title>Site Unavailable</title>
 <style type="text/css">
       body { text-align: center; padding: 150px; }
       h1 { font-size: 40px; }
@@ -14,9 +14,9 @@
 </head>
 <body>
 <div id="article">
-<h1>Our site is getting a little tune up and some love.</h1>
+<h1>Site Unavailable</h1>
 <div>
-<p>We apologize for the inconvenience, but we're performing some maintenance. We'll be back up soon!</p>
+<p>This site has been shut down and no longer exists, We are no longer responsible for any operations related to this site. Goodbye for the very last time.</p>
 <p>— AstroK</p>
 </div>
 </div>
